@@ -1,3 +1,14 @@
+2009-08-18  Doug Evans  <dje@sebabeach.org>
+
+	* gas-test.scm (<hw-asm>, test-data): Handle () values.
+	(<keyword>, test-data): Convert symbols to strings before passing
+	to string-append.
+	(<hw-index>, test-data): Enumerate all cases.  Emit correctly sized
+	result for scalars.
+
+	* operand.scm (hw-index-scalar): Set `name'.
+	(hw-index-anyof, hw-index-derived): Ditto.
+
 2009-08-17  Doug Evans  <dje@sebabeach.org>
 
 	* pmacros.scm (-pmacro-builtin-internal-test): New function.
